Add required fields for signup
