# src/use-cases/authentication/signup/validate-signup.ts
@@ -1,28 +1,20 @@
 import { Lazy } from 'fp-ts/function';
-import { User } from '../../../entities/user';
 import validator from 'validator';
-import { check, optionalCheck } from '../../../helpers/validation';
+import { check } from '../../../helpers/validation';
+import { SignupBody } from '../../../controllers/authentication/signup';
 
-export const validateSignupUseCase = (user: User): Lazy<Promise<User>> => {
+export const validateSignupUseCase = (
+    body: SignupBody,
+): Lazy<Promise<SignupBody>> => {
     return async () => {
+        check('email', (value) => validator.isEmail(value), body.email);
+
         check(
             'password',
             (value) => validator.isLength(value, { min: 1, max: 128 }),
-            user.password,
+            body.password,
         );
 
-        check(
-            'email',
-            (value) => validator.isEmail(value),
-            user.contactInformation.email,
-        );
-
-        optionalCheck(
-            'profilePicture',
-            (value) => validator.isURL(value),
-            user.profilePicture,
-        );
-
-        return user;
+        return body;
     };
 };
